--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,19 @@
 		<jackson.version>2.7.5</jackson.version>
 	</properties>
 	<dependencies>
-	
-	<!-- Hibernate -->
+
+		<!-- Hibernate -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-annotations</artifactId>
+			<version>3.3.1.GA</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-commons-annotations</artifactId>
+			<version>3.3.0.ga</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
@@ -29,8 +40,8 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>3.1.0.GA</version>
 		</dependency>
-	
-	
+
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
