--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,16 @@
 	</properties>
 
 	<dependencies>
-
+<dependency>
+  <groupId>org.jvnet.ws.wadl</groupId>
+  <artifactId>wadl-core</artifactId>
+  <version>1.1.6</version>
+</dependency>
+<dependency>
+    <groupId>org.jvnet.ws.wadl</groupId>
+    <artifactId>wadl-client-plugin</artifactId>
+    <version>1.1.6</version>
+</dependency>
 		<!-- hibernate -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
